--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="author-column">
             <span class="author"
               ><a
-                href="https://www.linkedin.com/in/ashishthapliyal"
+                href="https://research.google/people/108138/"
                 target="_blank"
                 >Ashish Thapliyal</a
               ></span
