Add README file for machine translations of COCO and CC3M

--- a/index.html
+++ b/index.html
@@ -201,10 +201,14 @@
           >Conceptual Captions (CC3M)</a
         >
         and
-        <a href="http://images.cocodataset.org/annotations/annotations_trainval2014.zip"
+        <a
+          href="http://images.cocodataset.org/annotations/annotations_trainval2014.zip"
+          target="_blank"
           >COCO Captions</a
         >. The back translations are provided to allow for a rough estimation of the translation
-        quality.
+        quality. See the
+        <a href="https://storage.googleapis.com/crossmodal-3600/README.md">README</a>
+        for further information about license and format.
       </div>
 
       <div class="center block" style="padding-bottom: 80px">
