--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           >COCO Captions</a
         >. The back translations are provided to allow for a rough estimation of the translation
         quality. See the
-        <a href="https://storage.googleapis.com/crossmodal-3600/README.md">README</a>
+        <a href="./web-data/README.md">README</a>
         for further information about license and format.
       </div>
 
@@ -217,7 +217,7 @@
           href="https://storage.googleapis.com/crossmodal-3600/cc3m_mt_train.jsonl.gz"
           download="cc3m-train-machine-translations.zip"
         >
-          <mwc-button raised class="page-button" icon="get_app"> CC3M Train (6.9 GB) </mwc-button>
+          <mwc-button raised class="page-button" icon="get_app"> CC3M Train (11 GB) </mwc-button>
         </a>
         <a
           class="no-decoration"
