View rendered README.md

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           >COCO Captions</a
         >. The back translations are provided to allow for a rough estimation of the translation
         quality. See the
-        <a href="./web-data/README.md">README</a>
+        <a href="https://github.com/google/crossmodal-3600/blob/main/web-data/README.md">README</a>
         for further information about license and format.
       </div>
 
