--- a/index.html
+++ b/index.html
@@ -214,31 +214,31 @@
       <div class="center block" style="padding-bottom: 80px">
         <a
           class="no-decoration"
-          href="https://storage.googleapis.com/crossmodal-3600/cc3m_mt_train.jsonl.gz"
+          href="https://storage.googleapis.com/crossmodal-3600/cc3m_mt_train.jsonl.bz2"
           download="cc3m-train-machine-translations.zip"
         >
-          <mwc-button raised class="page-button" icon="get_app"> CC3M Train (11 GB) </mwc-button>
+          <mwc-button raised class="page-button" icon="get_app"> CC3M Train (7 GB) </mwc-button>
         </a>
         <a
           class="no-decoration"
-          href="https://storage.googleapis.com/crossmodal-3600/cc3m_mt_dev.jsonl.gz"
+          href="https://storage.googleapis.com/crossmodal-3600/cc3m_mt_dev.jsonl.bz2"
           download="cc3m-dev-machine-translations.zip"
         >
-          <mwc-button raised class="page-button" icon="get_app"> CC3M Dev (56 MB) </mwc-button>
+          <mwc-button raised class="page-button" icon="get_app"> CC3M Dev (33 MB) </mwc-button>
         </a>
         <a
           class="no-decoration"
-          href="https://storage.googleapis.com/crossmodal-3600/coco_mt_train.jsonl.gz"
+          href="https://storage.googleapis.com/crossmodal-3600/coco_mt_train.jsonl.bz2"
           download="coco-train-machine-translations.zip"
         >
-          <mwc-button raised class="page-button" icon="get_app"> COCO Train (860 MB) </mwc-button>
+          <mwc-button raised class="page-button" icon="get_app"> COCO Train (567 MB) </mwc-button>
         </a>
         <a
           class="no-decoration"
-          href="https://storage.googleapis.com/crossmodal-3600/coco_mt_dev.jsonl.gz"
+          href="https://storage.googleapis.com/crossmodal-3600/coco_mt_dev.jsonl.bz2"
           download="coco-dev-machine-translations.zip"
         >
-          <mwc-button raised class="page-button" icon="get_app"> COCO Dev (38 MB) </mwc-button>
+          <mwc-button raised class="page-button" icon="get_app"> COCO Dev (25 MB) </mwc-button>
         </a>
       </div>
     </div>
